# shard

./: .gitignore  Cargo.toml  README.md  curseforge_key_extractor.py
.claude/: CLAUDE.md
.codex/: CODEX.md
.github/workflows/: release-publish-automation-v2.yml  release-publish-automation.yml  release.yml  store-publish.yml
desktop/: package.json
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/src/components/: AccountView.tsx  ContentItemRow.tsx  LoaderIcon.tsx  LogsView.tsx  ProfileView.tsx  Sidebar.tsx  StoreView.tsx  WindowControls.tsx  index.ts
desktop/src/store/: index.ts
launcher/: Cargo.toml
launcher/src/: accounts.rs  java.rs  main.rs  minecraft.rs  paths.rs
scripts/: compile-liquid-glass-icon.sh  sync-version.mjs
src/: accounts.rs  config.rs  content_store.rs  curseforge.rs  instance.rs  java.rs  lib.rs  library.rs  logs.rs  main.rs  minecraft.rs  modrinth.rs  paths.rs  profile.rs  skin.rs  store.rs  template.rs  updates.rs
ui/: package.json
ui/src/: App.tsx  styles.css
ui/src-tauri/: Cargo.toml
ui/src-tauri/src/: commands.rs  lib.rs
ui/src/components/: AccountView.tsx  AccountsView.tsx  LibraryView.tsx  LogsView.tsx  PlatformIcon.tsx  ProfileView.tsx  SettingsView.tsx  Sidebar.tsx  SkinViewer.tsx  StoreView.tsx  index.ts
ui/src/lib/: player-animations.ts
ui/src/types/: index.ts
ui/src/utils/: index.ts
web/app/: layout.tsx
web/app/docs/: layout.tsx
(+8 files in other folders)
